manifests/network/external-dns/overlays/home/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  template:
    spec:
      containers:
        - name: webhook
